Arrumando o diretório da pasta imagens

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  
 <body>
     <header>
-        <img src="/imagens/logo.png" class="logo" alt="Logo da Alura">
+        <img src="imagens/logo.png" class="logo" alt="Logo da Alura">
         <h1 class="titulo">Decodificador de texto</h1>
     </header>
  
@@ -21,7 +21,7 @@
         <section>
             <textarea class="input-texto" cols="40" rows="6" placeholder=" Digite seu texto aqui"></textarea>
            <div>
-                <img src="/imagens/alerta.png" class="informacao" alt="Apenas letras minúsculas e sem acento.">
+                <img src="imagens/alerta.png" class="informacao" alt="Apenas letras minúsculas e sem acento.">
            </div>
            
             <div class="botoes">
@@ -42,7 +42,7 @@
         </section>
 
         <div id="output" class="cadeado">
-            <img src="/imagens/cadeado.png" alt="cadeado">
+            <img src="imagens/cadeado.png" alt="cadeado">
             <h2>Nenhuma mensagem encontrada</h2>
             <span>Digite um texto que deseja criptografar ou descriptografar.</span>
         </div>
